<resources>
  <string name="app_name">Movie DB</string>
  <string name="navigation_drawer_open">Open navigation drawer</string>
  <string name="navigation_drawer_close">Close navigation drawer</string>
  <string name="nav_header_title">Android Studio</string>
  <string name="nav_header_subtitle">android.studio@android.com</string>
  <string name="nav_header_desc">Navigation header</string>
  <string name="action_settings">Settings</string>
  <string name="movie_poster">Movie Poster</string>
  <string name="generic_error">There was an error.</string>
  <string name="trailers">Trailers</string>
  <string name="reviews">Reviews</string>
  <string name="view_credits">View Credits</string>
  <string name="movie_detail_fragment">Details</string>
  <string name="movie_list_top_rated">Top Rated Movies</string>
  <string name="credits">Credits</string>
</resources>
