<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/movieListFragment">

  <fragment
      android:id="@+id/movieListFragment"
      android:name="com.affinityclick.mvvm.movie.list.topRated.MovieTopRatedListFragment"
      android:label="@string/movie_list_top_rated"
      tools:layout="@layout/movie_list_fragment">
    <action
        android:id="@+id/viewMovieDetail"
        app:destination="@+id/movieDetailFragment"
        app:enterAnim="@anim/nav_default_enter_anim"
        app:exitAnim="@anim/nav_default_exit_anim"
        app:popEnterAnim="@anim/nav_default_pop_enter_anim"
        app:popExitAnim="@anim/nav_default_pop_exit_anim"/>
  </fragment>
  <fragment
      android:id="@+id/movieDetailFragment"
      android:name="com.affinityclick.mvvm.movie.detail.MovieDetailFragment"
      android:label="@string/movie_detail_fragment"
      tools:layout="@layout/movie_detail_fragment">
    <argument
        android:name="movie"
        app:argType="com.affinityclick.mvvm.network.models.Movie"/>
    <action
        android:id="@+id/viewMovieCredits"
        app:destination="@id/movieCreditsFragment"
        app:enterAnim="@anim/nav_default_enter_anim"
        app:exitAnim="@anim/nav_default_exit_anim"
        app:popEnterAnim="@anim/nav_default_pop_enter_anim"
        app:popExitAnim="@anim/nav_default_pop_exit_anim"/>
  </fragment>
  <fragment
      android:id="@+id/movieCreditsFragment"
      android:name="com.affinityclick.mvvm.movie.credits.MovieCreditsFragment"
      android:label="@string/credits"
      tools:layout="@layout/credits_fragment">
    <argument
        android:name="movieId"
        app:argType="integer"/>
  </fragment>
</navigation>