<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >


  <ScrollView
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      app:layout_behavior="@string/appbar_scrolling_view_behavior"
      >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

      <ImageView
          android:id="@+id/movieDetailsBackdrop"
          android:layout_width="match_parent"
          android:layout_height="256dp"
          android:contentDescription="@string/movie_poster"
          android:fitsSystemWindows="true"
          android:scaleType="centerCrop"
          app:layout_constraintTop_toTopOf="parent"
          />

      <TextView
          android:id="@+id/movieDetailsTitle"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginEnd="@dimen/spacing_large"
          android:layout_marginLeft="@dimen/spacing_large"
          android:layout_marginRight="@dimen/spacing_large"
          android:layout_marginStart="@dimen/spacing_large"
          android:layout_marginTop="@dimen/spacing_large"
          android:textSize="24sp"
          android:textStyle="bold"
          app:layout_constraintHorizontal_bias="0.0"
          app:layout_constraintLeft_toLeftOf="parent"
          app:layout_constraintRight_toRightOf="parent"
          app:layout_constraintTop_toBottomOf="@id/movieDetailsBackdrop"
          />

      <TextView
          android:id="@+id/movieDetailsGenres"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginEnd="@dimen/spacing_large"
          android:layout_marginLeft="@dimen/spacing_large"
          android:layout_marginRight="@dimen/spacing_large"
          android:layout_marginStart="@dimen/spacing_large"
          android:layout_marginTop="@dimen/spacing_medium"
          android:alpha="0.7"
          app:layout_constraintLeft_toLeftOf="parent"
          app:layout_constraintRight_toRightOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/movieDetailsRating"
          />

      <TextView
          android:id="@+id/movieDetailsOverview"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginEnd="@dimen/spacing_large"
          android:layout_marginLeft="@dimen/spacing_large"
          android:layout_marginRight="@dimen/spacing_large"
          android:layout_marginStart="@dimen/spacing_large"
          android:layout_marginTop="@dimen/spacing_large"
          android:alpha="0.7"
          app:layout_constraintHorizontal_bias="0.0"
          app:layout_constraintLeft_toLeftOf="parent"
          app:layout_constraintRight_toRightOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/summaryLabel"
          />

      <RatingBar
          android:id="@+id/movieDetailsRating"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginEnd="@dimen/spacing_large"
          android:layout_marginLeft="@dimen/spacing_large"
          android:layout_marginRight="@dimen/spacing_large"
          android:layout_marginStart="@dimen/spacing_large"
          android:layout_marginTop="@dimen/spacing_medium"
          android:numStars="5"
          android:visibility="gone"
          app:layout_constraintHorizontal_bias="0.0"
          app:layout_constraintLeft_toLeftOf="parent"
          app:layout_constraintRight_toRightOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/movieDetailsTitle"
          style="@style/Widget.AppCompat.RatingBar.Small"
          />

      <TextView
          android:id="@+id/summaryLabel"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginEnd="@dimen/spacing_large"
          android:layout_marginLeft="@dimen/spacing_large"
          android:layout_marginRight="@dimen/spacing_large"
          android:layout_marginStart="@dimen/spacing_large"
          android:layout_marginTop="31dp"
          android:textSize="24sp"
          android:visibility="gone"
          app:layout_constraintHorizontal_bias="0.0"
          app:layout_constraintLeft_toLeftOf="parent"
          app:layout_constraintRight_toRightOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/movieDetailsReleaseDate"
          tools:text="Summary"
          />

      <TextView
          android:id="@+id/movieDetailsReleaseDate"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginEnd="@dimen/spacing_large"
          android:layout_marginLeft="@dimen/spacing_large"
          android:layout_marginRight="@dimen/spacing_large"
          android:layout_marginStart="@dimen/spacing_large"
          android:layout_marginTop="@dimen/spacing_medium"
          android:alpha="0.7"
          app:layout_constraintLeft_toLeftOf="parent"
          app:layout_constraintRight_toRightOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/movieDetailsGenres"
          />

      <HorizontalScrollView
          android:id="@+id/movieTrailersContainer"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginLeft="@dimen/spacing_large"
          android:layout_marginRight="@dimen/spacing_large"
          android:layout_marginTop="@dimen/spacing_medium"
          app:layout_constraintHorizontal_bias="0.0"
          app:layout_constraintLeft_toLeftOf="parent"
          app:layout_constraintRight_toRightOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/trailersLabel"
          >

        <LinearLayout
            android:id="@+id/movieTrailers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            />
      </HorizontalScrollView>

      <TextView
          android:id="@+id/trailersLabel"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginLeft="@dimen/spacing_large"
          android:layout_marginRight="@dimen/spacing_large"
          android:layout_marginTop="32dp"
          android:text="@string/trailers"
          android:textSize="24sp"
          android:visibility="gone"
          app:layout_constraintLeft_toLeftOf="parent"
          app:layout_constraintRight_toRightOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/movieDetailsOverview"
          />

      <TextView
          android:id="@+id/reviewsLabel"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginLeft="@dimen/spacing_large"
          android:layout_marginRight="@dimen/spacing_large"
          android:layout_marginTop="24dp"
          android:text="@string/reviews"
          android:textSize="24sp"
          android:visibility="gone"
          app:layout_constraintLeft_toLeftOf="parent"
          app:layout_constraintRight_toRightOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/movieTrailersContainer"
          />

      <LinearLayout
          android:id="@+id/movieReviews"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginLeft="@dimen/spacing_large"
          android:layout_marginRight="@dimen/spacing_large"
          android:layout_marginTop="@dimen/spacing_medium"
          android:orientation="vertical"
          app:layout_constraintLeft_toLeftOf="parent"
          app:layout_constraintRight_toRightOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/reviewsLabel"
          />

      <Button
          android:id="@+id/movieCredits"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginLeft="@dimen/spacing_large"
          android:layout_marginRight="@dimen/spacing_large"
          android:layout_marginTop="@dimen/spacing_medium"
          android:text="@string/view_credits"
          app:layout_constraintLeft_toLeftOf="parent"
          app:layout_constraintRight_toRightOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/movieReviews"
          />

    </androidx.constraintlayout.widget.ConstraintLayout>
  </ScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>